--- a/NewLife/NewLife.vcxproj
+++ b/NewLife/NewLife.vcxproj
@@ -69,7 +69,10 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <ExecutablePath>$(IncludePath);$(ExecutablePath)</ExecutablePath>
+    <IncludePath>$(IncludePath);$(ExecutablePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -143,11 +146,12 @@
     <ClInclude Include="WindowSDL.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="ball2.png" />
     <Image Include="bg.png" />
-    <Image Include="ball.png" />
-    <Image Include="bg2.jpg" />
+    <Image Include="bg3.png" />
     <Image Include="car1.png" />
     <Image Include="car2.png" />
+    <Image Include="goalNet.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
