--- a/NewLife/NewLife.vcxproj.filters
+++ b/NewLife/NewLife.vcxproj.filters
@@ -55,16 +55,16 @@
     <Image Include="car2.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="ball2.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="bg3.png">
-      <Filter>Resource Files</Filter>
-    </Image>
     <Image Include="goalNet.png">
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="bg.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ball.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="bgOri.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
