--- a/NewLife/NewLife.vcxproj
+++ b/NewLife/NewLife.vcxproj
@@ -151,6 +151,7 @@
     <Image Include="bgOri.png" />
     <Image Include="car1.png" />
     <Image Include="car2.png" />
+    <Image Include="goal.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
