--- a/NewLife/NewLife.vcxproj.filters
+++ b/NewLife/NewLife.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Resource Files\Goal">
+      <UniqueIdentifier>{d80b1b51-0382-40d7-8946-7dd7fa057002}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
@@ -66,6 +69,21 @@
     </Image>
     <Image Include="goal.png">
       <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="g1.png">
+      <Filter>Resource Files\Goal</Filter>
+    </Image>
+    <Image Include="g2.png">
+      <Filter>Resource Files\Goal</Filter>
+    </Image>
+    <Image Include="g3.png">
+      <Filter>Resource Files\Goal</Filter>
+    </Image>
+    <Image Include="goalCount.png">
+      <Filter>Resource Files\Goal</Filter>
+    </Image>
+    <Image Include="g0.png">
+      <Filter>Resource Files\Goal</Filter>
     </Image>
   </ItemGroup>
 </Project>
