--- a/NewLife/NewLife.vcxproj.filters
+++ b/NewLife/NewLife.vcxproj.filters
@@ -18,23 +18,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="MathUtil.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="WindowSDL.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Collision.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Process_Event.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Header Files\Collision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -52,38 +35,58 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="ball.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="bg.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="bgOri.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="car1.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="car2.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="goal.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="g1.png">
+    <Image Include="Resource Files\Goal\g0.png">
       <Filter>Resource Files\Goal</Filter>
     </Image>
-    <Image Include="g2.png">
+    <Image Include="Resource Files\Goal\g1.png">
       <Filter>Resource Files\Goal</Filter>
     </Image>
-    <Image Include="g3.png">
+    <Image Include="Resource Files\Goal\g2.png">
       <Filter>Resource Files\Goal</Filter>
     </Image>
-    <Image Include="goalCount.png">
+    <Image Include="Resource Files\Goal\g3.png">
       <Filter>Resource Files\Goal</Filter>
     </Image>
-    <Image Include="g0.png">
+    <Image Include="Resource Files\Goal\goalCount.png">
       <Filter>Resource Files\Goal</Filter>
     </Image>
+    <Image Include="Resource Files\ball.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource Files\bg.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource Files\bgOri.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource Files\car1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource Files\car2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource Files\goal.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource Files\goalNet.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source Files\Collision.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\main.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\MathUtil.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Process_Event.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\WindowSDL.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
