--- a/NewLife/NewLife.vcxproj
+++ b/NewLife/NewLife.vcxproj
@@ -28,7 +28,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -139,6 +139,7 @@
     <ClInclude Include="Header Files\WindowSDL.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Image.bmp" />
     <Image Include="Resource Files\ball.png" />
     <Image Include="Resource Files\bg.png" />
     <Image Include="Resource Files\bgOri.png" />
