--- a/NewLife/NewLife.vcxproj.filters
+++ b/NewLife/NewLife.vcxproj.filters
@@ -77,7 +77,7 @@
     <Image Include="Ruler.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="Image.bmp">
+    <Image Include="Source Files\Image.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
